<resources>
    <string name="app_name">Organic World</string>
    <string name="get_started">Get Started</string>
    <string name="let_s_bring_the_change_together">Let \'s bring the change together</string>
    <string name="welcome_to_the_new_world">Welcome,<br />To the new world</string>
    <string name="see_all">See All</string>
    <string name="promotionalimage">promotionalImage</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Home Activity</string>
    <string name="filter_view_https_organic">Organic Filter View Https</string>
    <string name="menu_home">Home</string>
    <string name="app_logo">App Logo</string>
    <string name="hey">Hey,</string>
    <string name="shop_by_category">Shop by category</string>
    <string name="my_account">My Account</string>
    <string name="face_washes">Face washes</string>
    <string name="daily_essentials">Daily Essentials</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="foods_amp_beverages"><![CDATA[Foods & Beverages]]></string>
    <string name="medicines">Medicines</string>
    <string name="other_items">Other Items</string>
    <string name="name">Name</string>
    <string name="help_friends_and_family">Help Friends And Family</string>
    <string name="shareMsg">Just <b>click on me</b> to help them to switch to a better healthy organic life.</string>
    <string name="all_categories">Shop By Categories</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="no_network_screen">No Network Screen</string>
    <string name="live_chemical_free_life">Live chemical free Life</string>
    <string name="continue1">Continue</string>
    <string name="champ">Champ</string>
    <string name="get_rid_of_those_bottles_filled_with_chemicals_and_start_using_organic_vagan_and_completely_organic_products">Get rid of those bottles filled with chemicals and start using organic, vegan and completely organic products</string>
    <string name="congrats_you_are_the_real_champ_nyou_chooses_the_right_path_nwe_are_wishing_you_a_great_life_ahead">Congrats! You are the real Champ.\nYou chooses the right path.\nWe are wishing you a great life ahead</string>
    <string name="join_organic_community">Join Organic Community</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="suggest_products">Suggest Products</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faqs">FAQs</string>
    <string name="want_to_say_something">Want to say something?</string>
    <string name="suggest_products_you_want_us_to_add">Suggest product you want us to add</string>
    <string name="product_name">Product name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="tell_us_what_you_feel_we_are_listening">Tell us what you feel,\nwe are listening</string>
    <string name="your_email_address">Your email address</string>
    <string name="koo">koo</string>
</resources>