<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_header"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/my_account" />
    </group>
    <group
        android:id="@+id/category"
        android:checkableBehavior="none">
        <item
            android:id="@+id/daily_essential"
            android:icon="@drawable/daily_essential_icon"
            android:title="@string/daily_essentials" />
        <item
            android:id="@+id/cosmetics"
            android:icon="@drawable/cosmetics"
            android:title="@string/cosmetics" />
        <item
            android:id="@+id/food_and_beverages"
            android:icon="@drawable/foods_and_drinks_icon"
            android:title="@string/foods_amp_beverages" />
        <item
            android:id="@+id/medicines"
            android:icon="@drawable/medicines_icon"
            android:title="@string/medicines" />
        <item
            android:id="@+id/showAll"
            android:icon="@drawable/show_all"
            android:title="@string/all_categories" />
    </group>
</menu>