<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/green">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/green"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_close_24" />

        <androidx.cardview.widget.CardView
            android:id="@+id/productView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/want_to_say_something"
                    android:textColor="@color/green_dark"
                    android:textSize="18sp" />

                <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="15dp"
                    app:borderColor="@color/green"
                    app:borderWidth="2dp">

                    <EditText
                        android:id="@+id/userIssue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="Products"
                        android:textAlignment="center"
                        android:hint="@string/tell_us_what_you_feel_we_are_listening"
                        android:inputType="textMultiLine"
                        android:textColorHint="@color/dark_grey" />
                </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

                <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:borderColor="@color/green"
                    app:borderWidth="2dp">

                    <EditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="Products"
                        android:hint="@string/your_email_address"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/dark_grey" />
                </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="45dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/navigation_icon" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productView"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@drawable/white_card_bg"
            android:text="@string/submit"
            android:textColor="@color/green" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>